Added Map Select, Springs

--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,8 @@ Assets/TerrainData_1cfd7d39-ec35-4675-b7fa-9ce3ab8bb63d.asset.meta
 Assets/TerrainData_1cfd7d39-ec35-4675-b7fa-9ce3ab8bb63d.asset
 Assets/TerrainData_057b5c5b-b1d0-419f-8f59-769bdcab53b0.asset.meta
 Assets/TerrainData_057b5c5b-b1d0-419f-8f59-769bdcab53b0.asset
+Assets/AmyTheHedgehog/Fonts/PressStart2P-vaV7.ttf
+Assets/AmyTheHedgehog/Fonts/mother-2-gigu-no-gyakushu.ttf
+Assets/AmyTheHedgehog/Fonts/license.txt
+Assets/AmyTheHedgehog/Fonts/BitBold.ttf
+Assets/AmyTheHedgehog/Fonts/amyshandwriting.ttf
