Hammer Jump, leaning, body shader improvements

--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,4 @@ Assets/AmyTheHedgehog/Fonts/license.txt
 Assets/AmyTheHedgehog/Fonts/BitBold.ttf
 Assets/AmyTheHedgehog/Fonts/amyshandwriting.ttf
 *.otf
+Assets/_TEST_.meta
